--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^6.4.1",
     "@mui/x-charts": "^7.24.0",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.2.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
     "react": "^18.3.1",
