--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
-    "react-slick": "^0.30.3"
+    "react-slick": "^0.30.3",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
