--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-    ]
-  }
+  "rewrites": [
+    { "source": "/api/sitemap", "destination": "/api/sitemap.js" },
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
