--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.1",
     "@mui/x-charts": "^7.24.0",
+    "@vercel/analytics": "^1.5.0",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
